# CyC_LoMaCoR

./: CMakeLists.txt  README.md
docs/navgraph/: Makefile  navgraph.tex  references.bib
docs/navgraph/figs/: map_indexing.vsdx  overview.vsdx
etc/: credentials.conf
etc/calibration/lidar/: lslidar.cal
etc/datablocks/: cyc.conf  g1.conf  robot_01.conf  scout.conf  server.conf
etc/env/classes/: object_classes_ms_coco.conf
etc/env/maps/: maps.csv
etc/maps/: maps.csv
etc/pipelines/: robot_01.conf  server.conf
resources/: tu_Zenodo.py
src/Filter_LoMaCoR_Maps/: CMakeLists.txt
src/Filter_LoMaCoR_Maps/src/: CLomacorMapsFilter.cpp  CLomacorMapsFilter.h  CStateMachine.cpp  CStateMachine.h  CZenodo.cpp  CZenodo.h  CZip.cpp  CZip.h  tu_Lomacor.cpp  tu_Zenodo.cpp
src/Filter_LoMaCoR_Server/: CMakeLists.txt
src/Filter_LoMaCoR_Server/src/: CLomacorServerFilter.cpp  CLomacorServerFilter.h
src/Filter_LoMaCoR_Viz/: CMakeLists.txt
src/Filter_LoMaCoR_Viz/src/: CLomacorVizFilter.cpp  CLomacorVizFilter.h
src/lomacor/: CMakeLists.txt
src/lomacor/src/: CStateMachine.cpp  CStateMachine.h  CZenodo.cpp  CZenodo.h  CZip.cpp  CZip.h  tu_Lomacor.cpp  tu_Zenodo.cpp
