# Copyright (c) 2025 CyberCortex Robotics SRL. All rights reserved
# Author: Sorin Mihai Grigorescu

set(FILTER_NAME Filter_LoMaCoR_Maps)

add_library(${FILTER_NAME} SHARED
    src/CZenodo.h
    src/CZenodo.cpp
	src/CLomacorMapsFilter.h
	src/CLomacorMapsFilter.cpp)

target_link_libraries(${FILTER_NAME}
	PUBLIC
        CycCore
        CycToolkit
        ${CyC_OPENCV_WORLD})

target_link_directories(${FILTER_NAME}
    PUBLIC 
        ${CyC_THIRD_PARTY_LIBRARY_DIRECTORIES})

if (WIN32)
    target_link_libraries(${FILTER_NAME} PUBLIC libconfig++)
else ()
    target_link_libraries(${FILTER_NAME} PUBLIC config++)
endif (WIN32)

# Build the filter into the filters folder
set_target_properties(${FILTER_NAME} PROPERTIES
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/${CyC_FILTERS_PATH}"
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/${CyC_FILTERS_PATH}"
)
# Override config-specific paths to keep everything in the same folder
set_target_properties(${FILTER_NAME} PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/${CyC_FILTERS_PATH}"
    ARCHIVE_OUTPUT_DIRECTORY_DEBUG "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/${CyC_FILTERS_PATH}"
    ARCHIVE_OUTPUT_DIRECTORY_RELEASE "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/${CyC_FILTERS_PATH}"
    ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/${CyC_FILTERS_PATH}"
    ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/${CyC_FILTERS_PATH}"

    LIBRARY_OUTPUT_DIRECTORY_DEBUG "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/${CyC_FILTERS_PATH}"
    LIBRARY_OUTPUT_DIRECTORY_RELEASE "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/${CyC_FILTERS_PATH}"
    LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/${CyC_FILTERS_PATH}"
    LIBRARY_OUTPUT_DIRECTORY_MINSIZEREL "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/${CyC_FILTERS_PATH}"

    RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/${CyC_FILTERS_PATH}"
    RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/${CyC_FILTERS_PATH}"
    RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/${CyC_FILTERS_PATH}"
    RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/${CyC_FILTERS_PATH}"
)

# Zenodo test unit
add_executable(tu_Zenodo src/tu_Zenodo.cpp src/CZenodo.h src/CZenodo.cpp)
target_include_directories(tu_Zenodo 
    PUBLIC 
        ${CyC_THIRD_PARTY}/nlohmann-json/include
#        ${CyC_THIRD_PARTY}/cpr/include
    )
#target_link_directories(tu_Zenodo 
#    PUBLIC 
#        ${CyC_THIRD_PARTY_LIBRARY_DIRECTORIES}
#        ${CyC_THIRD_PARTY}/cpr/${CyC_LIBS_BINARY_KEY}-${CyC_CUDA_VERSION_ID}/lib
#    )
target_link_libraries(tu_Zenodo PUBLIC CycToolkit ${CyC_OPENCV_WORLD} cpr)
if (NOT WIN32)
    target_link_libraries(tu_Zenodo PUBLIC fmt::fmt)
endif ()
